    - QTBUG-14724_close_orphaned_file_descriptors_after_printing.patch
    - disable-SSL-compression-by-default.patch
    - fix_jit_crash_on_x86_64.patch
    - add_missing_map_noreserve.patch
    - make_rules_for_redirect_stricter.patch
  * Refresh patches:
    - 16_hide_std_symbols_on_qtwebkit.diff
    - no_libicu_message.diff
    - Add_support_for_QT_USE_DRAG_DISTANCE_env_var.patch
  * Update symbols

 -- Timo Jyrinki <timo@debian.org>  Mon, 21 Jan 2013 08:37:04 +0000

qt4-x11 (4:4.8.2+dfsg-11) unstable; urgency=medium

  * Take upstream patch change_all_shmget_calls_to_use_user-only_memory.patch.
    It changes the shmget calls to get user-only memory, CVE-2013-0254.
    - Set urgency to medium.
    - Drop changes from tests/auto/qtipc/qsharedmemory/tst_qsharedmemory.cpp,
    it doesn't exists in the Debian tarball.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Tue, 05 Feb 2013 18:52:29 -0300

qt4-x11 (4:4.8.2+dfsg-10) unstable; urgency=medium

  * Add SSL-certificates-blacklist-mis-issued-Turktrust-cert.patch to blacklist
    miss issued certificates from Turktrust.
    - Patch taken from upstream.
    - Set urgency to medium.
  * Add Fix_binary_incompatibility_between_openssl_versions.patch to avoid a
    bug that would cause certificate verification problems if a different
    version of openssl is loaded at runtime to the headers Qt was compiled
    against (Closes: #697582).
    - Patch taken from upstream.
    - Also deserves setting the urgency to medium.
  * Confirm symbols files with buildds' logs.
  * Make libqt4-network recommend ca-certificates. It may be needed if doing
    SSL stuff and expecting to use certificate chains.
    Also Qt does not ship certificate bundles anymore but rather uses the
    system bundle (Closes: #530532).

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sat, 19 Jan 2013 16:47:57 -0300

qt4-x11 (4:4.8.2+dfsg-9) unstable; urgency=low
